# glagol

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PROJECT_STRUCTURE.md  README.md  SECURITY.md  USER_GUIDE.en.md  USER_GUIDE.md  USER_GUIDE.ru.md  package.json  pnpm-lock.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/day-logs/: day-0-1-master-log.md  day-10-master-log.md  day-11-master-log.md  day-12-master-log.md  day-12-session-2-master-log.md  day-12-session-3-master-log.md  day-2-master-log.md  day-3-master-log.md  day-4-master-log-part-2.md  day-4-master-log.md  day-5-session-1-master-log.md  day-5-session-2-master-log.md  day-5-session-5-master-log.md  day-6-session-1-master-log.md  day-6-session-2-master-log.md  day-6-session-3-master-log.md  day-7-session-1-master-log.md  day-7-session-2-master-log.md  day-8-master-log.md  day-9-master-log.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  lib.rs  logging.rs  main.rs  paths.rs  state.rs
src-tauri/src/audio/: mod.rs  wav_join.rs
src-tauri/src/backup/: create.rs  error.rs  mod.rs  restore.rs
src-tauri/src/commands/: backup.rs  config.rs  credentials.rs  dictation.rs  file.rs  mod.rs  storage.rs  synthesize.rs  usage.rs
src-tauri/src/db/: migrations.rs  mod.rs  repository.rs
src-tauri/src/dictation/: insert.rs  listener.rs  mod.rs  pipeline.rs  recorder.rs  resample.rs  session.rs  vad.rs
src-tauri/src/parser/: docx.rs  md.rs  mod.rs  pdf.rs  txt.rs
src-tauri/src/salute/: auth.rs  errors.rs  http.rs  mod.rs  synthesize.rs
src-tauri/src/secrets/: keyring.rs  mod.rs
src-tauri/src/stt/: mod.rs  openai_compat.rs  validation.rs  wav.rs
src-tauri/src/text/: chunker.rs  mod.rs  preprocessor.rs
src/components/: ScannedPdfDialog.tsx
src/components/dictation/: DevicePicker.tsx  DictationHistory.tsx  HotkeyEditor.tsx  OverlayPill.tsx
src/components/layout/: AppShell.tsx
src/components/settings/: BackupSection.tsx  DictationSection.tsx  LibraryPathSection.tsx  UsageSection.tsx
src/components/ui/: alert-dialog.tsx  radio-group.tsx  switch.tsx
src/contexts/: CredentialsContext.tsx
src/lib/: format.ts  pluralize.ts  tauri.ts  voices.ts
src/pages/: Dictation.tsx  Library.tsx  Settings.tsx  Synthesize.tsx
