[package]
name = "glagol"
version = "0.1.0"
description = "Free local text-to-speech for long Russian documents via SaluteSpeech"
authors = ["Glagol Contributors"]
edition = "2021"
license = "MIT"
repository = "https://github.com/dimasiksuleyman-sudo/glagol"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "glagol_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri framework
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client (with pure-Rust TLS for embedded certificate pinning)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Utilities
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
chrono = "0.4"

# Structured logging (subscriber added in Sprint 5)
tracing = "0.1"

# Audio (WAV read/write for chunk concatenation)
hound = "3.5"

# Secrets storage via OS-native credential manager (Wincred on Windows).
# `windows-native` is REQUIRED — without it, production silently uses
# the mock backend and credentials are not persisted between launches.
keyring = { version = "3", features = ["windows-native"] }

[dev-dependencies]
# HTTP mocking for unit tests
mockito = "1"
tokio = { version = "1", features = ["full", "test-util"] }
