[package]
name = "glagol"
version = "0.1.0"
description = "Free local text-to-speech for long Russian documents via SaluteSpeech"
authors = ["Glagol Contributors"]
edition = "2021"
license = "MIT"
repository = "https://github.com/dimasiksuleyman-sudo/glagol"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "glagol_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri framework
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client (with pure-Rust TLS for embedded certificate pinning).
# `multipart` (Sprint 6 PR1) is required by the OpenAI-compatible STT
# client — `POST /audio/transcriptions` sends the WAV as a multipart form.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream", "multipart", "socks"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Utilities
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
chrono = "0.4"

# Structured logging (subscriber added in Sprint 5)
tracing = "0.1"

# Audio (WAV read/write for chunk concatenation)
hound = "3.5"

# Text preprocessing (URL/email regex; Tier 1 abbreviation expansion uses
# plain str::replace, not regex). Default Unicode-aware features keep
# `\b` working correctly around Cyrillic.
regex = "1"

# File-parser deps (Sprint 4 PR #23):
#   * encoding_rs   — TXT: BOM detection + Windows-1251 fallback decoding.
#   * pulldown-cmark — MD: event-based stripping to plain text.
#   * docx-rust     — DOCX: parsing-focused fork of the original docx crate.
#   * pdfium-render — PDF: high-level Rust wrapper around Pdfium. The
#                     Pdfium shared library itself is downloaded by
#                     `build.rs` from bblanchon/pdfium-binaries and
#                     placed in OUT_DIR; the path is propagated via the
#                     PDFIUM_LIBRARY_PATH compile-time env var.
encoding_rs = "0.8"
pulldown-cmark = { version = "0.13", default-features = false }
docx-rust = "0.1"
pdfium-render = "0.9"

# Secrets storage via OS-native credential manager (Wincred on Windows).
# `windows-native` is REQUIRED — without it, production silently uses
# the mock backend and credentials are not persisted between launches.
keyring = { version = "3", features = ["windows-native"] }

# Local database. `bundled` compiles SQLite statically (zero system deps,
# critical for the MSI installer). `serde_json` enables JSON column types
# in case future migrations need them.
rusqlite = { version = "0.39", features = ["bundled", "serde_json"] }
rusqlite_migration = "2.5"

# Zip archive support for the backup/restore feature (Sprint 5c).
# `deflate`-only feature subset: we never need bzip2/lzma/aes/zstd, and
# keeping the dep tree narrow matters more than the marginal CPU savings.
# Pure Rust via flate2; no system zlib required for the MSI installer.
zip = { version = "2", default-features = false, features = ["deflate"] }

# Microphone capture for the Dictation recorder (Sprint 6 PR2). `cpal` wraps
# WASAPI on the target platform (Windows); the Linux build (ALSA, needs
# `libasound2-dev`) exists only to run the CI/quality gates. `rubato`
# resamples the device's native rate down to Whisper's 16 kHz, offline, on
# finalization.
#
# NOTE (kickoff D1 deviations):
#  * rubato: D1 pinned `3.0.0`, but D8's implementation plan uses the
#    `FftFixedIn` + `process_partial` + `output_delay` API, which rubato
#    replaced in 1.0.0 with a single `Fft` struct over the
#    `audioadapter`/`audioadapter-buffers` buffer traits. `0.16.2` (Mar 2025,
#    latest 0.x) is the newest release that still carries that API, keeps the
#    dep tree narrow (no audioadapter companion crates), and satisfies D1's
#    stated reason for the pin — avoiding the six-day-old rubato 4.0.0.
#  * cpal: D1 pinned `0.18.1`, but it declares `windows`/`windows-core` as the
#    loose `>=0.61, <=0.62`; alongside Tauri 2 the resolver splits that into
#    `windows 0.61.3` (COM types) + `windows-core 0.62.2` (impl macro), and
#    cpal's own `#[implement]` macro then fails its trait bounds on Windows
#    (green on Linux/ALSA, red on Windows/WASAPI — Windows CI caught it).
#    `0.17.3` (D1's explicit runner-up) has the identical public API and no
#    separate `windows-core` dep, so its macro + types come from one `windows`
#    crate and it builds cleanly with Tauri. See the PR body «Deviations».
cpal = "0.17.3"
rubato = "0.16.2"

[dev-dependencies]
# HTTP mocking for unit tests
mockito = "1"
tokio = { version = "1", features = ["full", "test-util"] }
